--- a/src/pages/program/index.astro
+++ b/src/pages/program/index.astro
@@ -148,14 +148,20 @@ let weekDates = getWeekDates(weekOffset);
       id="userModal"
       class="fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden"
     >
-      <div class="bg-white p-4 rounded shadow-lg">
+      <div class="bg-white p-8 rounded shadow-lg">
         <h2 class="text-xl mb-4">Seleccionar Usuario</h2>
+        <input
+          type="text"
+          id="userSearch"
+          class="border border-gray-300 rounded px-2 py-1 mb-4"
+          placeholder="Buscar usuario..."
+        />
         <ul id="userList" class="max-h-60 overflow-y-auto">
           {
             allUsers.map((user) => (
               <li class="mb-2">
                 <button
-                  class="bg-blue-500 text-white px-2 py-1 rounded user-select-btn"
+                  class="bg-blue-500 text-white w-full px-2 py-1 rounded user-select-btn"
                   data-username={user.nombre}
                   data-congregacion-id={user.Congregacion}
                 >
@@ -173,6 +179,7 @@ let weekDates = getWeekDates(weekOffset);
         </button>
       </div>
     </div>
+
     <!-- Popup de advertencia -->
     <div
       id="warningPopup"
@@ -294,29 +301,57 @@ let weekDates = getWeekDates(weekOffset);
     return dates;
   };
 
+  // Buscador para el modal
+  document.getElementById("userSearch").addEventListener("input", function () {
+    const searchValue = (this as HTMLInputElement).value.toLowerCase();
+    const userList = document.getElementById("userList");
+    const users = userList.getElementsByTagName("li");
+
+    Array.from(users).forEach((user) => {
+      const userName = user
+        .getElementsByTagName("button")[0]
+        .dataset.username.toLowerCase();
+      if (userName.includes(searchValue)) {
+        user.style.display = "";
+      } else {
+        user.style.display = "none";
+      }
+    });
+  });
+
+  const prevWeekBtn = document.getElementById("prevWeekBtn");
+  const nextWeekBtn = document.getElementById("nextWeekBtn");
+  const saveBtn = document.getElementById("saveBtn");
+  // Add event listeners for week navigation buttons
+  prevWeekBtn.addEventListener("click", async () => {
+    currentDate.setDate(currentDate.getDate() - 7);
+    updateWeekDates();
+    await loadWeekData();
+    document.querySelectorAll("select").forEach((select) => {
+      checkUserAssignment(select);
+    });
+  });
+
+  nextWeekBtn.addEventListener("click", async () => {
+    currentDate.setDate(currentDate.getDate() + 7);
+    updateWeekDates();
+    await loadWeekData();
+    document.querySelectorAll("select").forEach((select) => {
+      checkUserAssignment(select);
+    });
+  });
+
+  import { Notyf } from "notyf";
+  import "notyf/notyf.min.css";
+
+  // Crear una instancia de Notyf
+  const notyf = new Notyf({
+    duration: 6000,
+  });
+
   // Load week data when the DOM is fully loaded
   document.addEventListener("DOMContentLoaded", async () => {
     await loadWeekData();
-    const prevWeekBtn = document.getElementById("prevWeekBtn");
-    const nextWeekBtn = document.getElementById("nextWeekBtn");
-    const saveBtn = document.getElementById("saveBtn");
-
-    // Add event listeners for week navigation buttons
-    prevWeekBtn.addEventListener("click", async () => {
-      currentDate.setDate(currentDate.getDate() - 7);
-      updateWeekDates();
-      await loadWeekData();
-    });
-    nextWeekBtn.addEventListener("click", async () => {
-      currentDate.setDate(currentDate.getDate() + 7);
-      updateWeekDates();
-      await loadWeekData();
-    });
-
-    // Add event listener for save button
-    saveBtn.addEventListener("click", async () => {
-      await saveWeekData();
-    });
 
     // Set initial values of the selects based on fetched week data
     const weekData = await fetchWeekData(new Date());
@@ -347,15 +382,6 @@ let weekDates = getWeekDates(weekOffset);
         // Verificar si el usuario está en la lista de opciones del select
         const userName = select.value;
         const icon = document.getElementById(`icon-${day}-${turno}-${index}`);
-        const isInOptions = Array.from(select.options).some(
-          (option) => option.value === userName
-        );
-
-        if (!isInOptions) {
-          icon.innerHTML = "🚫"; // Icono para no disponible
-        } else {
-          icon.innerHTML = ""; // Limpiar icono si está disponible
-        }
 
         // Verificar si el usuario ya está asignado en otro turno de la semana
         const assignedTurns = [];
@@ -369,49 +395,76 @@ let weekDates = getWeekDates(weekOffset);
 
         if (assignedTurns.length > 0) {
           icon.innerHTML += "⚠️"; // Icono para ya asignado
-          // alert(
+          // notyf.error(
           //   `El usuario ${userName} ya participa esta semana en ${assignedTurns.join(", ")}.`
           // );
         }
       }
-
-      // Agregar evento change
-      select.addEventListener("change", () => {
-        // Verificar si el select no está vacío
-        if (select.value) {
-          // Verificar si el usuario está en la lista de opciones del select
-          const userName = select.value;
-          const icon = document.getElementById(`icon-${day}-${turno}-${index}`);
-          const isInOptions = Array.from(select.options).some(
-            (option) => option.value === userName
-          );
-
-          if (!isInOptions) {
-            icon.innerHTML = "🚫"; // Icono para no disponible
-          } else {
-            icon.innerHTML = ""; // Limpiar icono si está disponible
-          }
-
-          // Verificar si el usuario ya está asignado en otro turno de la semana
-          const assignedTurns = [];
-          document.querySelectorAll("select").forEach((otherSelect) => {
-            if (otherSelect !== select && otherSelect.value === userName) {
-              const otherDay = otherSelect.dataset.day;
-              const otherTurno = otherSelect.dataset.turno;
-              assignedTurns.push(`${otherDay} en el turno ${otherTurno}`);
-            }
-          });
-
-          if (assignedTurns.length > 0) {
-            icon.innerHTML += "⚠️"; // Icono para ya asignado
-            alert(
-              `El usuario ${userName} ya participa esta semana en ${assignedTurns.join(", ")}.`
-            );
-          }
-        }
-      });
     });
   });
+
+  function checkUserAssignment(select: HTMLSelectElement) {
+    if (select.value) {
+      // Verificar si el usuario ya está asignado en otro turno de la semana
+      const userName = select.value;
+      const day = select.dataset.day;
+      const turno = select.dataset.turno;
+      const index = select.dataset.index;
+      const icon = document.getElementById(`icon-${day}-${turno}-${index}`);
+
+      const assignedTurns = [];
+      document.querySelectorAll("select").forEach((otherSelect) => {
+        if (otherSelect !== select && otherSelect.value === userName) {
+          const otherDay = otherSelect.dataset.day;
+          const otherTurno = otherSelect.dataset.turno;
+          assignedTurns.push(`${otherDay} en el turno ${otherTurno}`);
+        }
+      });
+
+      if (assignedTurns.length > 0) {
+        icon.innerHTML = "⚠️"; // Icono para ya asignado
+        notyf.error(
+          `El usuario ${userName} ya participa esta semana en ${assignedTurns.join(", ")}.`
+        );
+      } else {
+        icon.innerHTML = ""; // Limpiar icono si no hay conflictos
+      }
+    } else {
+      const day = select.dataset.day;
+      const turno = select.dataset.turno;
+      const index = select.dataset.index;
+      const icon = document.getElementById(`icon-${day}-${turno}-${index}`);
+      icon.innerHTML = ""; // Limpiar icono si el select está vacío
+    }
+  }
+
+  // Agregar evento click para los botones del modal
+  document.querySelectorAll(".user-select-btn").forEach((button) => {
+    button.addEventListener("click", (event) => {
+      const target = event.target as HTMLElement;
+      const userName = target.dataset.username;
+      const select = document.querySelector(
+        "select[data-day][data-turno][data-index]"
+      ) as HTMLSelectElement;
+      select.value = userName;
+      checkUserAssignment(select);
+    });
+  });
+
+  // Agregar evento change fuera del evento DOMContentLoaded
+  document.querySelectorAll("select").forEach((select) => {
+    select.addEventListener("change", () => {
+      checkUserAssignment(select);
+    });
+  });
+
+  // Add event listener for save button
+  saveBtn.addEventListener("click", async () => {
+    await saveWeekData();
+  });
+
+  // Set initial values of the selects based on fetched week data
+  const weekData = await fetchWeekData(new Date());
 
   function checkAvailability(select: HTMLSelectElement) {
     const day = select.dataset.day;
@@ -419,22 +472,6 @@ let weekDates = getWeekDates(weekOffset);
     const index = select.dataset.index;
     const userName = select.value;
     const icon = document.getElementById(`icon-${day}-${turno}-${index}`);
-
-    const usersDisponibilidad = {};
-
-    // Verificar si el usuario está disponible
-    const isAvailable =
-      usersDisponibilidad[day] &&
-      usersDisponibilidad[day][turno] &&
-      usersDisponibilidad[day][turno].some(
-        (user: { nombre: any }) => user.nombre === userName
-      );
-
-    if (!isAvailable) {
-      icon.innerHTML = "🚫"; // Icono para no disponible
-    } else {
-      icon.innerHTML = ""; // Limpiar icono si está disponible
-    }
 
     // Verificar si el usuario ya está asignado en otro turno de la semana
     const assignedTurns = [];
@@ -452,27 +489,15 @@ let weekDates = getWeekDates(weekOffset);
         `El usuario ${userName} ya participa esta semana en ${assignedTurns.join(", ")}.`
       );
     }
-
-    // Verificar si el usuario está en la lista de opciones del select
-    const isInOptions = Array.from(select.options).some(
-      (option) => option.value === userName
-    );
-
-    if (!isInOptions) {
-      icon.innerHTML = "🚫"; // Icono para no disponible
-    } else {
-      icon.innerHTML = ""; // Limpiar icono si está disponible
-    }
   }
 
   async function fetchWeekData(date: Date) {
     try {
-      console.log("Fetching week data for date:", date);
       const response = await fetch(
         `/api/getWeekData.json?date=${date.toISOString().split("T")[0]}`
       );
       const data = await response.json();
-      console.log("Fetched week data:", data);
+
       return data;
     } catch (error) {
       console.error("Error fetching week data:", error);
