fixed tabla congregacion

--- a/src/pages/program/index.astro
+++ b/src/pages/program/index.astro
@@ -183,7 +183,7 @@ let weekDates = getWeekDates(weekOffset);
                 <button
                   class="bg-blue-500 text-white w-full px-2 py-1 rounded user-select-btn"
                   data-username={user.nombre}
-                  data-congregacion-id={user.Congregacion}
+                  data-congregacion-id={user.congregacion}
                 >
                   {user.nombre}
                 </button>
