--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -1,5 +1,5 @@
 ---
-import  { DataView }  from "../components/DataView.tsx"
+import  { DataView }  from "@/components/index"
 
 import Layout from "../layouts/Layout.astro"
 
