--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,9 +1,6 @@
 ---
-import Check from "../components/icons/Check.astro";
-import EyeClose from "../components/icons/EyeClose.astro";
-import EyeOpen from "../components/icons/EyeOpen.astro";
-import Spinner from "../components/Spinner.astro";
-import AuthLayout from "../layouts/AuthLayout.astro";
+import { Check, EyeClose, EyeOpen, Spinner } from "@/components/index";
+import {AuthLayout} from "@/layouts/index";
 ---
 
 <AuthLayout title="Inicia Sesión | PPAM Malabo">
