added congregation route & table

--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -1,14 +1,10 @@
 ---
-import  { DataView }  from "@/components/index"
-
-import Layout from "../layouts/Layout.astro"
-
-
-
+import { DataView } from "@/components/index";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="data">
+<Layout title="Lista de usuarios | PPAM Malabo">
     <section class="max-w-7xl mx-auto mt-10">
-        <DataView client:only/>
+        <DataView client:only />
     </section>
 </Layout>
