add create congregation btn

--- a/src/pages/congregaciones.astro
+++ b/src/pages/congregaciones.astro
@@ -1,6 +1,6 @@
 ---
 import { Layout } from "@/layouts/index";
-import { CongregationTable } from "../components";
+import { CongregationTable, Plus } from "../components";
 
 
 ---
@@ -10,6 +10,11 @@ import { CongregationTable } from "../components";
     title="Administra, edita y crea congregaciones | PPAM Malabo"
 >
     <section class="max-w-7xl mx-auto mt-10 px-5 md:px-10 pb-10">
+
+        <a href="/" class="bg-cyan-600 py-3 px-5 rounded-lg text-white mb-10 flex items-center w-fit gap-x-2">
+            <Plus className="size-7"/>
+            <span class="text-md font-semibold">Congregación</span>
+        </a>
         <CongregationTable client:load/> 
     </section>
 </Layout>
