--- a/src/components/IndexCard.astro
+++ b/src/components/IndexCard.astro
@@ -10,13 +10,13 @@ const { subtitle, title, href } = Astro.props;
 
 <a
     href={href}
-    class="border-2 border-cyan-600 px-10 py-7 rounded-lg max-w-72 hover:scale-105 hover:bg-cyan-600 transition-all group"
+    class="border-2 border-cyan-600 px-1 md:px-10 py-7 rounded-lg max-w-72 hover:scale-105 hover:bg-cyan-600 transition-all group"
 >
     <slot />
-    <h5 class="text-2xl text-center font-semibold group-hover:text-white">
+    <h5 class="text-lg md:2xl text-center font-semibold group-hover:text-white">
         {title}
     </h5>
-    <p class="text-sm text-center mt-2 group-hover:text-white">
+    <p class="text-xs hidden md:block md:text-sm text-center mt-2 group-hover:text-white">
         {subtitle}
     </p>
 </a>
